--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=Plus+Jakarta+Sans:wght@400;700;800&display=swap');
 @import "tailwindcss";
+@source "../index.html";
 
 /* === DESIGN TOKENS === */
 :root {
